
1.55
-----------------
GR v15r6p1.
ST v9r5p5.
Lots of new monitoring tags.
Don't clean up crumbs or chunks if a merge has missing input files.
-------------------------------------------


1.54
-----------------
GlastRelease GR v15r5 and Root v5.18.00c-gl1 (new DFI with the filter bits).
Using the ISOC_NIGHLY flightops configuration (to get the new DFI).
New tags of monitoring packages (to include the filter bits informations).
PipelineStaging6 buffer disk temporarily removed from confing.
Be more paranoid about running cleanupCrumbs.
Make saved recon core files world-readable and group-writeable.
Include chunkId in logger message if not all crumb files are found for.
-------------------------------------------


1.53
-----------------
Don't set confusing & wrong status metadata when registering datasets.
Put data in /Data/Flight, not /Data/IandT.
Put nfs data in .../L1 instead of .../L1/rootData.
Put LPA, LCI, MC data in separate folders.
Do alarms on TKR trending.
Send messages to log watcher if things get weird.
Removed site from the end of filenames.
Bug fixed in DataCat registration (fileFormat). 
-------------------------------------------


1.52
-----------------
Keep & register ft2Txt files.
Keep (but don't register) fakeFT2 files.
Support dataset versions in data catalog. LONE-58
Update run quality table. LONE-60

All of the xxx.version files are gone.  You still have to say next=True when
asking for the name of a file you're about to create.  And you have to add a
variable to processes in the XML for any run-level file they read or create.

Anything that used to depend on a run-level file being created now depends on
it's being registered.  This reduces the number of things that checkRun has to
depend on, and lowers branching numbers elswhere, so it should make the graph
less heinous-looking. (But that's not why I did it.)

registerPrep/registerStuff can now handle multiple fileTypes from the same